--- a/.gitignore
+++ b/.gitignore
@@ -339,4 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
-./arcade-cabinet-lighting/__vm/
+arcade-cabinet-lighting/__vm/
